--- a/src/application/FindMusic/style/index.less
+++ b/src/application/FindMusic/style/index.less
@@ -2,7 +2,8 @@
 
 .@{prefix} {
   &-wrap {
-    padding: 20px 0px 20px 30px;
+    min-width: 535px;
+    padding: 20px 0px 0px 30px;
     flex: 1;
     overflow: hidden;
     display: flex;
