--- a/src/components/Nav/style/index.less
+++ b/src/components/Nav/style/index.less
@@ -55,6 +55,7 @@
   flex-direction: column;
   height: 100%;
   width: 200px;
+  flex-shrink: 0;
   border-right: 0.1px solid rgb(185, 181, 181);
   &-hidden {
     width: 45px;
