--- a/src/components/Recommend/style/index.less
+++ b/src/components/Recommend/style/index.less
@@ -2,7 +2,6 @@
 
 .@{prefix} {
   &-wrap {
-    align-self: stretch;
     margin: 20px 0;
   }
 
@@ -33,10 +32,9 @@
       height: auto;
       flex: 1;
       min-width: 155px;
-      max-width: 200px;
+      max-width: 220px;
       overflow: hidden;
-      transition: transform 0.3s;
-      transition: opacity 0.3s;
+      transition: opacity 0.3s, transform 0.3s;
       &:hover {
         opacity: 0.7;
       }
@@ -50,6 +48,8 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        font-size: 15px;
+        margin-top: 5px;
       }
       .play-count {
         position: absolute;
