--- a/src/components/ScrollLoad/style/index.less
+++ b/src/components/ScrollLoad/style/index.less
@@ -1,4 +1,4 @@
-@prefix: "scrollLoad";
+@prefix: scrollLoad;
 
 .@{prefix} {
   &-songlist {
@@ -33,18 +33,6 @@
         top: 0;
         left: 0;
         width: 100%;
-      }
-      .name {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        font-size: 15px;
-        margin-top: 5px;
-      }
-      .creator {
-        font-size: 10px;
-        margin-top: 5px;
-        color: rgb(125, 127, 129);
       }
     }
   }
