--- a/src/application/FindMusic/style/content.less
+++ b/src/application/FindMusic/style/content.less
@@ -4,7 +4,7 @@
   &-wrap {
     padding-top: 20px;
     padding-right: 30px;
-    flex: 1;
+    flex: 1 0 0;
     height: 0;
     overflow-x: auto;
     overflow-y: overlay;
