--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -17,11 +17,15 @@
   }
   .contain {
     flex: 1;
+    //防止元素被子元素撑开
+    overflow: hidden;
     display: flex;
     flex-direction: row;
   }
   .bottom {
     height: 58px;
     min-height: 58px;
+    overflow: hidden;
+    border-top: 1px solid rgb(173, 173, 173);
   }
 }
