--- a/src/application/Player/style/index.less
+++ b/src/application/Player/style/index.less
@@ -4,7 +4,6 @@
   &-wrap {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     flex-direction: row;
     display: flex;
     justify-content: space-between;
@@ -129,7 +128,9 @@
     justify-content: center;
     align-items: center;
     margin-right: 20px;
-    & > div {
+    & > .bofanfanshi,
+    & > .volume,
+    & > .liebiao {
       margin: 0 3px 0 33px;
     }
     i {
@@ -143,6 +144,7 @@
     .volume {
       transform: scale(1.3);
       .click(1.2);
+      margin-left: 40px;
     }
     .liebiao {
       .click(0.95);
