--- a/src/layouts/HomeLayout.less
+++ b/src/layouts/HomeLayout.less
@@ -1,31 +1,33 @@
-.wrap {
-  min-height: 535px;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  .header {
-    width: 100%;
+@prefix: homeLayout;
+.@{prefix} {
+  &-wrap {
+    min-height: 535px;
+    height: 100vh;
+    width: 100vw;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 30px;
-    min-height: 30px;
-    background-color: red;
-  }
-  .contain {
-    flex: 1;
-    //防止元素被子元素撑开
-    overflow: hidden;
-    display: flex;
-    flex-direction: row;
-  }
-  .bottom {
-    height: 58px;
-    min-height: 58px;
-    overflow: hidden;
-    border-top: 1px solid rgb(173, 173, 173);
+    flex-direction: column;
+    justify-content: space-between;
+    & > .header {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      height: 30px;
+      min-height: 30px;
+      background-color: red;
+    }
+    & > .contain {
+      flex: 1;
+      //防止元素被子元素撑开
+      overflow: hidden;
+      display: flex;
+      flex-direction: row;
+    }
+    & > .bottom {
+      height: 58px;
+      min-height: 58px;
+      border-top: 1px solid rgb(173, 173, 173);
+    }
   }
 }
