播放功能半完成

--- a/src/application/Player/style/SongListModel.less
+++ b/src/application/Player/style/SongListModel.less
@@ -118,13 +118,14 @@
       flex: 1;
       margin-left: 30px;
       font-size: 15px;
+      line-height: 20px;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
       > .text {
         flex: 1;
-        overflow: hidden;
+        overflow-y: hidden;
         text-overflow: ellipsis;
       }
       > div.taber {
