对歌曲列表使用事件代理

--- a/src/application/Player/style/SongListModel.less
+++ b/src/application/Player/style/SongListModel.less
@@ -95,6 +95,7 @@
     > .author,
     > .duration-time {
       color: rgb(180, 180, 180);
+      line-height: 16px;
     }
     > .author {
       width: 28%;
@@ -125,7 +126,7 @@
       align-items: center;
       > .text {
         flex: 1;
-        overflow-y: hidden;
+        overflow: hidden;
         text-overflow: ellipsis;
       }
       > div.taber {
