--- a/src/components/SelectCat/style/index.less
+++ b/src/components/SelectCat/style/index.less
@@ -97,7 +97,7 @@
       div.hot {
         &::after {
           content: "HOT";
-          font-size: 5px;
+          font-size: px;
           font-weight: bold;
           transform: scale(0.6) translate(7px, -4px);
           color: red;
